--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
+@import "reset";
+@import "content";
 
 *,
 *::before,
@@ -112,3 +114,12 @@ a {
     transform: translateY(-50%);
   }
 }
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+// .ql-editor.ql-blank {
+//   min-height: 400px;
+// }
