--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -120,6 +120,12 @@ a {
   white-space: nowrap;
 }
 
-// .ql-editor.ql-blank {
-//   min-height: 400px;
-// }
+.quill {
+  position: relative;
+  .ql-toolbar {
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 10;
+  }
+}
