--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -1,5 +1,13 @@
 .entry-content,
 .entry-content .ql-snow .ql-editor {
+  p {
+    display: inline;
+    line-height: 1 !important;
+    margin-bottom: 10px !important;
+  }
+  a {
+    display: inline-block;
+  }
   font-family: "Epilogue", sans-serif;
   font-size: 16px;
   h2,
@@ -51,7 +59,7 @@
   }
   img {
     border-radius: 8px;
-    margin-bottom: 30px;
+    margin: 20px 0;
   }
   @media screen and (max-width: 1023.98px) {
     font-size: 14px;
